deployment/manifest/ingresses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dg0311-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: dg0311.20.249.184.228.nip.io
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: member
                port:
                  number: 80
          - path: /api/mysub/
            pathType: Prefix
            backend:
              service:
                name: mysub
                port:
                  number: 80
          - path: /api/recommend/
            pathType: Prefix
            backend:
              service:
                name: recommend
                port:
                  number: 80
